--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Junkie 2035</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="icon" href="images/syringe.ico">
 </head>
 <body>
   <div id="app"></div>
